--- a/build.gradle
+++ b/build.gradle
@@ -68,4 +68,7 @@ dependencies {
     compile "com.sun.mail:javax.mail"
     compile ("org.springframework.boot:spring-boot-starter-mail")
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '1.4.3.RELEASE'
+    compile ("org.springframework.boot:spring-boot-test")
+    compile ("org.springframework:spring-test")
+    compile ("junit:junit")
 }
